--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "laravel/framework": "^11.0",
         "laravel-afterburner/jetstream": "^1.0|dev-master",
         "livewire/livewire": "^3.5",
-        "league/flysystem-aws-s3-v3": "^3.30"
+        "league/flysystem-aws-s3-v3": "^3.30",
+        "spatie/livewire-filepond": "^1.5"
     },
     "require-dev": {
         "laravel/pint": "^1.13",
